assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&display=swap');

* {
    margin: 0;
    font-family: 'Montserrat', Open-Sans;
}

body {
    display: flex;
    flex-direction: column;
}

header {
    height: 20%;
    padding: 10px;
}

main {
    height: 90%;
}

footer {
    height: 10%;
}

/* home page */

#navbar img {
    height: 80px;
    float: left;
    padding: 0.5rem 0.5rem;
}

#navbar {
    text-align: center;
}

#navbar a {
    float: right;
    top: 15px;
    color: #f2f2f2;
    position:relative;
    text-decoration: none;
    background-color:hsl(27, 98%, 52%);
}

#navbar a:hover {
    background-color: rgb(245, 194, 164);
    color: black;
}

#navbar a.active {
    background-color: gray;
}

#bgimage {
    background: url('../images/photo21.jpg');
    background-size: cover;
    background-position: center;
}

h1 {
    font-size: 2rem;
    padding-top: 2rem;
    padding-left: 3rem;
}

.join-us {
    color:gray;
    text-align: left;
}

#linktoevents {
    font-size: 1.5rem;
    text-decoration: transparent;
    color: gray;
    padding-left: 3rem;
}

#container {
    clear: both;
    display: flex;
    justify-content: space-around;
    margin-top: 0;
}

#container .info {
    background-color: hsl(27, 98%, 52%);
    text-align:center;
    color: white;
    border: transparent;
    float: none;
}

#containerfooter {
    text-align: center;
    text-decoration: none;
    height: auto;
    padding: 0.5rem;
    margin-bottom: 0;
    background-color: hsl(27, 98%, 52%);
}

.item1 img {
    height: 300px;
    padding-top: 5px;
}

.item2 img {
    height: 300px;
    padding-top: 5px;
}

.item3 img {
    height: 300px;
    padding-top: 5px;
}

.item4 img {
    height: 300px;
    padding-top: 5px;
}

#linktotop {
    font-size: 20px;
    color: gray;
    text-decoration: none;
    text-align: center;
}

#linktotop:hover {
    color: black;
    font-size: 20px;
    border-radius: 40%;
}

/* footer */

.footer-links a {
    text-align: center;
}

.footer-links li {
    display: inline;
}

.footer-links i {
    font-size: 200%;
    margin: 5%;
    color: rgb(221, 93, 8);
}

.copyright i:hover {
    color: blue;
}

.twitter i:hover {
    color: rgb(29,161,242);
}

.facebook i:hover {
    color: rgb(66,103,178);
}

.instagram i:hover {
    color: rgb(138, 58, 185);
}


/* login page form styling */

.form-section1 {
    clear:left;
    background: url('../images/photo28.jpg');
    background-size: cover;
    background-position: center;
    height: 80vh;
}

.login-form {
    margin: 150px 10% 0 0;
    color: rgb(221, 93, 8);
    background: transparent;
    max-width: 400px;
    position:absolute;
    padding-left: 5rem;
}

.login-form h2 {
    color: rgb(221, 93, 8);
    margin-bottom: 20px;
}

.text-input {
    background: transparent;
    width: 100%;
    height: 25px;
    margin: 5px 0 20px 0;
    border: 1px solid rgb(221, 93, 8);
    border-radius: 5px;
}

.text-input:hover {
    border-color: blue;
}

#email:focus {
    background: white;
    color: black;
}

#password:focus {
    background: white;
    color: black;
}

.kickstart-button {
    border-radius: 5%;
    margin-top: 10px;
    margin-bottom: 10px;
    text-align: center;
    font-size: 100%;
    background-color: rgb(248, 105, 10);
    box-shadow: green;
    color:rgb(44, 43, 43);
    display: block;
}

.kickstart-button:hover {
    background-color: white;
}

.clear-button {
    top: 10px;
    color: red;
}


/* about us page styling */

#aboutuspage {
    width: 40%;
    height: auto;
    padding-top: 4rem;
    padding-left: 3rem;
    display: inline-block;
}

#aboutuspage h2 {
    color: rgb(221, 93, 8);
}

#aboutuspage p {
    text-align: justify;
    color: gray;
}

#aboutusimg {
    display: inline-block;
    width: 50%;
    text-align: center;
}

/* Contact Us page Styling */

.form-section2 h2 {
    color: rgb(221, 93, 8);
    width: 100%;
}

#email:focus {
    background: white;
    color: black;
}

#phone:focus {
    background: white;
    color: black;
}

.form-section3 {
    padding-top: 5rem;
    display: inline-block;
}

#query {
    background: transparent;
    width: 100%;
}

#query:focus {
    display: block;
    background: white;
}

.contactimg {
    clear:left;
    background-size: cover;
    background-position: center;
    width: 100vw;
}

/* Confirmation Page Styling */

.message1 h2{
    text-align: center;
    color: rgb(221, 93, 8);
    padding-top: 150px;
}

.message1 h3{
    text-align: center;
    color: gray;
    padding-top: 150px;
}

.backtohome {
    text-align: center;
    padding-top: 200px;
}

/* media query for logos w3schools.com */

@media only screen and (max-width: 1150px) {
    #navbar img {
        content:url('../images/motorbikebuddy-logo2.jpg');
        text-align: center;
        padding: 0.5rem 0.5rem;
    }
}

/* media query for navbar - w3schools.com */

@media only screen and (max-width: 1300px) {
    #navbar a {
        width: 50%;
        position: static;
        padding: .5rem;
    }
}

/* media query 320px */

@media only screen and (min-width: 320px) and (orientation: portrait) {
/*navbar*/
    #navbar a {
        font-size: large;
    }
/* index */
    #bgimage {
        width: 100vw;
        height: 50vh;
    }
    h1 {
        font-size: 1rem;
        padding-top: 0.6rem;
        padding-left: 0;
        text-align: center;
    }
    #linktoevents {
        display: none;
    }
    #container {
        clear: both;
        margin-top: 3rem;
        flex-direction: column;
    }
    #containerfooter {
        margin-bottom: 1rem;
    }
    #container .info {
        font-size: small;
    }
    h2 {
        color: black;
    }
    .item1 img {
        width: 100%;
        height: auto;
    }
    .item2 img {
        width: 100%;
        height: auto;
    }
    .item3 img {
        width: 100%;
        height: auto;
    }
    .item4 img {
        width: 100%;
        height: auto;
    }
    .footer-links {
        font-size: x-small;
        text-align: center;
        padding-left: 0;
        padding-top: 0;
    }
/*login */
    .form-section1 {
        clear:left;
        background: url('../images/photo28.jpg');
        background-size: cover;
        background-position: center;
        height: 60vh;
    }
    .login-form {
        margin: 50px 10px 0 0;
        max-width: 60%;
        padding-left: 1rem;
    }
/*about us */
    #aboutuspage {
        width: 90%;
        padding-left: 1rem;
    }
    #aboutuspage h2 {
        color: rgb(221, 93, 8);
    }
    
    #aboutuspage p {
        text-align: justify;
        color: gray;
    }
    
    #aboutusimg {
        display: none;
    }
/* contact us */
    .contactimg {
        background-size:contain;
        background-repeat: no-repeat;
        height: 100vh;
    }

    .form-section3 {
        margin-left: 15%;
        margin-right: 15%;
    }
   
    #email:focus {
        color: black;
    }
    
    #phone:focus {
        color: black;
    }
    
    #query {
        width: 100%;
        border-radius: 5px;
    }
    
    #query:focus {
        display: block;
    }
    footer {
        display: block;
        margin-top: 50px;
    }
}

/* media query for small screens 360px*/

@media only screen and (min-width: 360px) and (orientation: landscape) {
/* index */
    #container {
        clear: both;
        flex-direction: column;
        text-align: center;
        float: none;
        width: 100%;
    }
/* about us */
    #aboutuspage {
        width: 90%;
    }
/* contact us */
    .form-section3 {
        clear: both;
        padding-top: 17rem;
        max-width: 95%;

    }
}

/* media query for small screens 375px*/

@media only screen and (min-width: 375px) and (orientation: landscape) {
/*index */
    .bgimage2 {
        background: url('../images/photo21.jpg');
        width: 100vw;
        height: 80vh;
    }
}

/* media query for small screens 863px*/
@media only screen and (min-width: 863px) and (orientation: landscape) {
/*index*/
    #container {
        margin-top: 1rem;
    }
}

/* media query for medium screens 1024px*/

@media only screen and (min-width: 1024px) and (orientation: landscape) {
/*index */
    #bgimage {
        background: url('../images/photo21.jpg');
        background-repeat: no-repeat;
        background-size: cover;
        width: 100vw;
        height: 55vh;
    }
    #container {
        clear: both;
        flex-direction: column;
        text-align: center;
        float: none;
        width: 65%;
        margin-left: 17.5%;
        margin-top: 3rem;
    }
    .footer-links a {
        font-size: 1rem;
    }

/* contact us */
    .form-section2 {
        height: 80vh;
    }
    .form-section3 {
        padding-top: 5rem;
        max-width: 50%;
        margin-left: 5%;
        margin-bottom: 5rem;
    }
}

/* media query for medium screens 1200px*/

@media only screen and (min-width: 1200px) {
/*index */
    #navber img {
        content: url('/assets/images/motorbikebuddy-logo.jpg');
    }
    #bgimage {
        background: url('../images/photo21.jpg');
        background-repeat: no-repeat;
        background-size: cover;
        width: 100%;
        margin: 0;
        height: 80vh;
    }
    h1 {
        text-align: center;
    }
    #linktoevents {
        display: block;
        text-align: center;
    }
    #container {
        clear: both;
        flex-direction: row;
        float: none;
        width: auto;
        margin-left: 0;
        margin-top: 3rem;
    }
    h2 {
        color: black;
    }
    .item1 img {
        width: 99%;
    }
    .item2 img {
        width: 99%;
    }
    .item3 img {
        width: 99%;
    }
    .item4 img {
        width: 99%;
    }
    #container .info {
        background-color: hsl(27, 98%, 52%);
        font-size: x-small;
    }
    #linktop {
        margin-top: 2rem;
    }
    .footer-links {
        font-size: small;
    }
/*Login*/
    .login-form {
        margin: 80px 10% 0 0;
        background: transparent;
        max-width: 50%;
        position:absolute;
        padding-left: 5rem;
    }
/*about us */
    footer {
        margin-top: 0;
    }
/*contact us */
    .contactimg{
        height: 60vh;
    }
    .form-section3 {
        padding-top: 5rem;
        max-width: 50%;
        margin-left: 25%;
        margin-right: 25%;
        margin-bottom: 5rem;
    }
    .form-section2 {
        background-size: cover;   
        height: 70vh;
    }
}

/* media query for large screens 1300px*/

@media only screen and (min-width: 1300px) {
/*index*/
    #navbar a {
        margin-top: 1rem;
        padding: 1rem;
        width: 10%;
    }
/*login*/
    .form-section1 {
        height: 70vh;
    }
}

/* media query for large screens 1350px*/

@media only screen and (min-width: 1350px) {
/*index*/
    #bgimage {
        height: 90vh;
    }
/*contact us*/
    .form-section2 {
        background-size: cover;   
        height: 130vh;
    }
}

